Alignment Fixes

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -159,7 +159,7 @@
 
 
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 430px) {
 
   #contact .submit{
     display: flex;
